minor auth adjustaments